Improved collision detection, improved jumping, and more
Collision Detection:
- Added CollisionType enum class to CollisionEvent.h
- Added additional data to BoxColliderComponent
- Collision box with margins during detection
- Ground, ceiling, right wall and left wall collision detection
- Position adjustment in the MovementSystem for collision overlaps
- Collision between two entities can only have 1 type of collision at a time
- Only dynamic entities use collision box margins

Jumping:
- Added additional data in PlayerControllerComponent
- Added additional data in RigidBodyComponent
- Better and more precise control in PlayerControlsSystem

Movement:
- Switched from floating-point movement to integer movement for better precision and more deterministic movement
- Added additional data to RigidBodyComponent
- Designed in a way to prevent any loss of decimal movement, as well as allow slow velocities
- Boolean variables moved to PlayerControllerComponent
- Added utility functions for PlayerControlsSystem to better divide tasks and improve code readability

Other:
- Some code refactoring
- Created .cpp files for the systems and separated the definitions from the declarations
- Created Utilities folder which only has the new Rect.h for now (which only contains data)

--- a/My2DGameEngineExtended/My2DGameEngineExtended.vcxproj
+++ b/My2DGameEngineExtended/My2DGameEngineExtended.vcxproj
@@ -659,6 +659,7 @@ for /r $(ProjectDir)external\ %%f in (*.dll) do @copy "%%f" $(OutDir)</Command>
     <ClInclude Include="include\Systems\PlayerControlsSystem.h" />
     <ClInclude Include="include\Systems\RenderColliderSystem.h" />
     <ClInclude Include="include\Systems\RenderSystem.h" />
+    <ClInclude Include="include\Utilities\Rect.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="include\libraries\glm\detail\func_common.inl" />
@@ -812,6 +813,12 @@ for /r $(ProjectDir)external\ %%f in (*.dll) do @copy "%%f" $(OutDir)</Command>
     <ClCompile Include="src\libraries\imgui\imgui_tables.cpp" />
     <ClCompile Include="src\libraries\imgui\imgui_widgets.cpp" />
     <ClCompile Include="src\main.cpp" />
+    <ClCompile Include="src\Systems\AnimationSystem.cpp" />
+    <ClCompile Include="src\Systems\CollisionSystem.cpp" />
+    <ClCompile Include="src\Systems\MovementSystem.cpp" />
+    <ClCompile Include="src\Systems\PlayerControlsSystem.cpp" />
+    <ClCompile Include="src\Systems\RenderColliderSystem.cpp" />
+    <ClCompile Include="src\Systems\RenderSystem.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
