Empty Component Tagging + AI + other
Tags:
- Empty component tags

AI:
- Worm Enemy Ai
- Worm Enemy behaviour + collision

other:
- Added margin data member for Box Collider
- Updated collision and collision rendering to use new margin value
- Reworked how player animations work
- Code refactoring
- Config.h for game options (e.g. screen size)

--- a/My2DGameEngineExtended/My2DGameEngineExtended.vcxproj
+++ b/My2DGameEngineExtended/My2DGameEngineExtended.vcxproj
@@ -157,11 +157,14 @@ for /r $(ProjectDir)external\ %%f in (*.dll) do @copy "%%f" $(OutDir)</Command>
     <ClInclude Include="include\Components.h" />
     <ClInclude Include="include\Components\AnimationComponent.h" />
     <ClInclude Include="include\Components\BoxColliderComponent.h" />
+    <ClInclude Include="include\Components\TagComponents.h" />
+    <ClInclude Include="include\Components\TagComponents\EnemyTagComponent.h" />
     <ClInclude Include="include\Components\PlayerControllerComponent.h" />
-    <ClInclude Include="include\Components\PlayerTagComponent.h" />
-    <ClInclude Include="include\Components\TagComponent.h" />
+    <ClInclude Include="include\Components\TagComponents\PlayerTagComponent.h" />
     <ClInclude Include="include\Components\RigidBodyComponent.h" />
     <ClInclude Include="include\Components\SpriteComponent.h" />
+    <ClInclude Include="include\Components\TagComponents\TileTagComponent.h" />
+    <ClInclude Include="include\Components\TagComponents\WormTagComponent.h" />
     <ClInclude Include="include\Components\TransformComponent.h" />
     <ClInclude Include="include\EventBus\Event.h" />
     <ClInclude Include="include\EventBus\EventBus.h" />
@@ -659,6 +662,8 @@ for /r $(ProjectDir)external\ %%f in (*.dll) do @copy "%%f" $(OutDir)</Command>
     <ClInclude Include="include\Systems\PlayerControlsSystem.h" />
     <ClInclude Include="include\Systems\RenderColliderSystem.h" />
     <ClInclude Include="include\Systems\RenderSystem.h" />
+    <ClInclude Include="include\Systems\WormEnemyAiSystem.h" />
+    <ClInclude Include="include\Utilities\Config.h" />
     <ClInclude Include="include\Utilities\Rect.h" />
   </ItemGroup>
   <ItemGroup>
@@ -819,6 +824,7 @@ for /r $(ProjectDir)external\ %%f in (*.dll) do @copy "%%f" $(OutDir)</Command>
     <ClCompile Include="src\Systems\PlayerControlsSystem.cpp" />
     <ClCompile Include="src\Systems\RenderColliderSystem.cpp" />
     <ClCompile Include="src\Systems\RenderSystem.cpp" />
+    <ClCompile Include="src\Systems\WormEnemyAiSystem.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
